FEAT main + footer

--- a/index.html
+++ b/index.html
@@ -280,6 +280,27 @@
 
     <footer>
         <div class="toolbar">
+            <div class="icon-left">
+                <i class="fa-solid fa-microphone"></i>
+               
+                <i class="fa-solid fa-video"></i>
+
+            </div>
+
+            <div class="icon-center">
+                <i class="fa-solid fa-user-plus"></i>
+                <i class="fa-solid fa-users"></i>
+                <i class="fa-solid fa-share-from-square"></i>
+                <i class="fa-solid fa-comment"></i>
+                <i class="fa-solid fa-ellipsis"></i>
+
+            </div>
+
+            
+            <div class="icon-right">
+                End meeting
+
+            </div>
 
         </div>
     </footer>
